--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
+    "ng2-ckeditor": "^1.1.9",
     "ngx-pipes": "^1.6.4",
     "rxjs": "^5.4.2",
+    "tinymce": "^4.6.6",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
