--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "angular2-moment": "^1.7.0",
+    "angular2-uuid": "^1.1.1",
     "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
