--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
+    "mydatepicker": "^2.0.29",
     "ng2-ckeditor": "^1.1.9",
     "ngx-pipes": "^1.6.4",
     "rxjs": "^5.4.2",
