--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.2.4",
     "angular2-moment": "^1.7.0",
     "angular2-uuid": "^1.1.1",
+    "angular2-wizard": "^0.4.0",
     "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
