--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
+    "font-awesome": "^4.7.0",
     "mydatepicker": "^2.0.29",
     "ng2-ckeditor": "^1.1.9",
     "ngx-pipes": "^1.6.4",
