--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "angular2-moment": "^1.7.0",
+    "angular2-toaster": "^4.0.1",
     "angular2-uuid": "^1.1.1",
     "angular2-wizard": "^0.4.0",
     "angularfire2": "^4.0.0-rc0",
